--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
   },
   "homepage": "https://github.com/wechu07/Yelpcamp#readme",
   "dependencies": {
-    "cloudinary": "^1.30.0",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "mongoose": "^6.4.3",
-    "passport": "^0.6.0"
+    "ejs": "^3.1.5",
+    "ejs-mate": "^3.0.0",
+    "express": "^4.17.1",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.10.4"
   }
 }
