--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/wechu07/Yelpcamp#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
-    "ejs-mate": "^3.0.0",
+    "ejs-mate": "^4.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "joi": "^17.2.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.10.4"
