--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "homepage": "https://github.com/wechu07/Yelpcamp#readme",
   "dependencies": {
+    "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
+    "core-js": "^3.23.3",
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
@@ -26,6 +29,8 @@
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.14",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.3.0"
