--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/wechu07/Yelpcamp#readme",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.13.4",
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
     "core-js": "^3.23.3",
