--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "helmet": "^5.1.0",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.14",
@@ -34,6 +35,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.3.0"
+    "passport-local-mongoose": "^6.3.0",
+    "sanitize-html": "^2.7.0"
   }
 }
