--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.3.0",
+    "redis": "^4.2.0",
     "sanitize-html": "^2.7.0"
   }
 }
