--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://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@github.com/wechu07/Yelpcamp.git"
+    "url": ""
   },
   "keywords": [],
   "author": "",
