--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wechu07/Yelpcamp"
+    "url": "git+https://github.com/wechu07/Yelpcamp.git"
   },
   "keywords": [],
   "author": "",
