--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-session": "^1.17.3",
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
