--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mapbox/mapbox-sdk": "^0.13.4",
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "core-js": "^3.23.3",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
