--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "@mapbox/mapbox-sdk": "^0.13.4",
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
-    "connect-mongo": "^4.6.0",
+    "connect-mongo": "^3.2.0",
+    "connect-mongodb-session": "^3.1.1",
     "core-js": "^3.23.3",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
-    "express-session": "^1.17.3",
+    "express-session": "^1.17.1",
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
     "method-override": "^3.0.0",
