--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^6.4.4",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-redis": "^0.1.7",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
