--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cloudinary": "^1.30.0",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
+    "connect-redis": "^6.1.3",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "ejs-mate": "^4.0.0",
@@ -40,6 +41,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^7.1.2",
     "redis": "^4.2.0",
+    "redis-om": "^0.3.6",
     "sanitize-html": "^2.7.0"
   }
 }
