--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -42,5 +43,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "sanitize-html": "^2.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
