--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,22 @@
-# fly.toml app configuration file generated for y-elpcamp on 2023-08-10T11:36:52+03:00
+# fly.toml app configuration file generated for wapi on 2024-04-11T21:19:00+03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "y-elpcamp"
-primary_region = "jnb"
+app = 'wapi'
+primary_region = 'jnb'
+
+[build]
 
 [http_service]
-  internal_port = 8080
+  internal_port = 3000
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
